--- a/src/sass/_preview.scss
+++ b/src/sass/_preview.scss
@@ -6,17 +6,17 @@
       align-items: center;
       padding: 1.5rem 3.25rem;
       transition: all 0.3s;
-      border-right: 1px solid #fff;
+      border-right: 1px solid var(--color-background);
       text-decoration: none;
     }
 
     &:hover {
-      background-color: $color-grey-light-1;
+      background-color: var(--color-grey--1);
       transform: translateY(-2px);
     }
 
     &--active {
-      background-color: $color-grey-light-1;
+      background-color: var(--color-grey--1);
     }
   }
 
@@ -39,8 +39,8 @@
       left: 0;
       background-image: linear-gradient(
         to right bottom,
-        $color-grad-1,
-        $color-grad-2
+        var(--color-grad-1),
+        var(--color-grad-2)
       );
       opacity: 0.4;
     }
@@ -73,7 +73,7 @@
   &__title {
     grid-column: 1/-1;
     font-size: 1.45rem;
-    color: $color-primary;
+    color: var(--color-primary);
     text-transform: uppercase;
     font-weight: 600;
 
@@ -86,13 +86,13 @@
 
   &__publisher {
     font-size: 1.15rem;
-    color: $color-grey-dark-2;
+    color: var(--color-text--2);
     text-transform: uppercase;
     font-weight: 600;
   }
 
   &__user-generated {
-    background-color: darken($color-grey-light-2, 2%);
+    background-color: var(--color-grey--2);
 
     display: flex;
     align-items: center;
@@ -107,7 +107,7 @@
     svg {
       height: 1.2rem;
       width: 1.2rem;
-      fill: $color-primary;
+      fill: var(--color-primary);
     }
   }
 }
