--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -1,9 +1,10 @@
 %btn {
-  background-image: $gradient;
+  background-image: var(--gradient);
+  // background-color: var(--color-primary-variant);
   border-radius: 10rem;
   border: none;
   text-transform: uppercase;
-  color: #fff;
+  color: var(--color-on-primary);
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -27,7 +28,7 @@
 
   padding: 1.5rem 4rem;
   font-size: 1.5rem;
-  font-weight: 600;
+  font-weight: 700;
 
   svg {
     height: 2.25rem;
@@ -43,7 +44,7 @@
     @extend %btn;
 
     font-size: 1.4rem;
-    font-weight: 600;
+    font-weight: 700;
     padding: 1.25rem 2.25rem;
     text-decoration: none;
 
@@ -56,11 +57,11 @@
 }
 
 .btn--inline {
-  color: $color-primary;
+  color: var(--color-primary);
   font-size: 1.3rem;
   font-weight: 600;
   border: none;
-  background-color: $color-grey-light-1;
+  background-color: var(--color-grey--1);
   padding: 0.8rem 1.2rem;
   border-radius: 10rem;
   cursor: pointer;
@@ -81,8 +82,8 @@
   }
 
   &:hover {
-    color: $color-grad-2;
-    background-color: $color-grey-light-2;
+    color: var(--color-primary-variant);
+    background-color: var(--color-grey--2);
   }
 
   &:focus {
@@ -94,7 +95,8 @@
   font-size: 1.3rem;
   font-weight: 600;
   border: none;
-  background-color: $color-grey-light-1;
+  background-color: var(--color-grey--1);
+  color: var(--color-text--1);
   padding: 1.2rem 1.6rem;
   border-radius: 10rem;
   cursor: pointer;
@@ -107,21 +109,20 @@
     width: 1.6rem;
     fill: currentColor;
     margin: 0 0.2rem;
-    color: $color-grad-2;
   }
 
   span {
-    margin: 0 0.4rem;
-    background: $gradient;
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
+    // margin: 0 0.4rem;
+    // background: $gradient;
+    // background-clip: text;
+    // -webkit-background-clip: text;
+    // color: transparent;
     text-transform: uppercase;
   }
 
   &:hover {
-    color: $color-grad-2;
-    background-color: $color-grey-light-2;
+    color: var(--color-primary-variant);
+    background-color: var(--color-grey--2);
   }
 
   &:focus {
@@ -130,7 +131,8 @@
 }
 
 .btn--round {
-  background-image: $gradient;
+  background-image: var(--gradient);
+  // background-color: var(--color-primary-variant);
   border-radius: 50%;
   border: none;
   cursor: pointer;
@@ -154,7 +156,7 @@
   svg {
     height: 2.5rem;
     width: 2.5rem;
-    fill: #fff;
+    fill: var(--color-on-primary);
   }
 }
 
@@ -168,7 +170,7 @@
   svg {
     height: 100%;
     width: 100%;
-    fill: $color-primary;
+    fill: var(--color-primary);
     transition: all 0.3s;
   }
 
@@ -177,12 +179,12 @@
   }
 
   &:hover svg {
-    fill: $color-grad-2;
+    fill: var(--color-primary-variant);
     transform: translateY(-1px);
   }
 
   &:active svg {
-    fill: $color-grad-2;
+    fill: var(--color-primary-variant);
     transform: translateY(0);
   }
 
@@ -195,8 +197,8 @@
   align-self: center;
   width: fit-content;
   background-image: none;
-  background-color: $color-grey-light-2;
-  color: $color-primary;
+  background-color: var(--color-grey--2);
+  color: var(--color-primary);
 
   &:not(:last-child) {
     margin-bottom: 2rem;
@@ -204,11 +206,11 @@
 }
 
 .btn--list {
-  color: $color-grey-dark-2;
+  color: var(--color-primary);
   font-size: 2rem;
   font-weight: 600;
   border: none;
-  background-color: rgba($color-grey-light-3, 0.8);
+  background-color: var(--color-grey--2);
   padding: 0.8rem 1rem;
   border-radius: 1rem;
   cursor: pointer;
@@ -238,8 +240,8 @@
   }
 
   &:hover {
-    color: $color-grad-2;
-    background-color: $color-grey-light-2;
+    color: var(--color-primary-variant);
+    filter: brightness(0.95);
   }
 
   &:focus {
@@ -251,7 +253,7 @@
   &--2 {
     font-size: 2rem;
     font-weight: 700;
-    color: $color-primary;
+    color: var(--color-primary);
     text-transform: uppercase;
     margin-bottom: 2.5rem;
     text-align: center;
@@ -260,7 +262,7 @@
   &--3 {
     font-size: 1.6rem;
     font-weight: 700;
-    color: $color-grey-dark-1;
+    color: var(--color-text--1);
     text-transform: uppercase;
     margin: 1.5rem 0;
     text-align: center;
@@ -269,7 +271,7 @@
 
 .link:link,
 .link:visited {
-  color: $color-grey-dark-2;
+  color: var(--color-text--2);
 }
 
 .spinner {
@@ -279,7 +281,7 @@
   svg {
     height: 6rem;
     width: 6rem;
-    fill: $color-primary;
+    fill: var(--color-primary);
     animation: rotate 2s infinite linear;
   }
 }
@@ -305,7 +307,7 @@
   svg {
     height: 3rem;
     width: 3rem;
-    fill: $color-primary;
+    fill: var(--color-primary);
     transform: translateY(-0.3rem);
   }
 
@@ -314,12 +316,13 @@
     font-size: 1.8rem;
     line-height: 1.5;
     font-weight: 600;
+    color: var(--color-text--1);
   }
 
   a:link,
   a:visited {
     text-decoration: none;
-    color: darken($color-primary, 5%);
+    color: var(--color-primary);
   }
   a:hover {
     text-decoration: underline;
