--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,38 +1,60 @@
+@import url('https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&display=swap');
 .header {
   grid-area: head;
-  background-color: $color-grey-light-1;
+  background-color: var(--color-grey--1);
   display: flex;
   align-items: center;
   justify-content: space-between;
 
   &__logo {
-    margin-left: 4rem;
-    height: 4.6rem;
-    display: block;
+    margin-left: 2.5rem;
+    display: flex;
+    align-items: center;
 
     @include respond(tab-port) {
-      margin-left: 3rem;
-      margin-right: 2rem;
+      margin-left: 2.5rem;
+      margin-right: 1.5rem;
     }
     @include respond(phone) {
       margin-left: 2.5rem;
       margin-right: 1rem;
     }
   }
+  &__logo-img {
+    height: 5rem;
+    margin-right: 1rem;
+
+    &--home {
+      @include respond(tab-land) {
+        margin-right: 0;
+      }
+    }
+  }
+  &__logo-name {
+    font-family: 'Akaya Kanadaka', serif;
+    font-size: 3.4rem;
+    transform: translateY(-3px);
+
+    &--home {
+      @include respond(tab-land) {
+        display: none;
+      }
+    }
+  }
 }
 
 .search {
-  background-color: #fff;
+  background-color: var(--color-grey--2);
   border-radius: 10rem;
   display: flex;
   align-items: center;
   padding-left: 3rem;
-  margin-right: 2.5rem; //added
+  margin-right: 1.5rem; //added
   transition: all 0.3s;
 
   &:focus-within {
     transform: translateY(-2px);
-    box-shadow: 0 0.7rem 3rem rgba($color-grey-dark-1, 0.08);
+    // box-shadow: 0 0.7rem 1rem rgba(var(--color-text--1), 0.08);
   }
 
   &__field {
@@ -41,14 +63,14 @@
     font-family: inherit;
     color: inherit;
     font-size: 1.7rem;
-    width: 30rem;
+    width: 25rem;
 
     &:focus {
       outline: none;
     }
 
     &::placeholder {
-      color: $color-grey-light-3;
+      color: var(--color-text--3);
     }
 
     @include respond(tab-port) {
@@ -56,14 +78,15 @@
       max-width: 14rem;
 
       &::placeholder {
-        color: white;
+        color: var(--color-grey--2);
       }
     }
   }
 
   &__btn {
-    font-weight: 600;
+    font-weight: 700;
     font-family: inherit;
+    padding: 1.5rem 3rem;
 
     @include respond(tab-land) {
       span {
@@ -82,7 +105,7 @@
       svg {
         margin-right: 1rem !important;
       }
-      padding: 1.5rem 4rem;
+      padding: 1.5rem 3rem;
     }
     @include respond(phone-small) {
       span {
@@ -105,8 +128,8 @@
   align-self: stretch;
 
   @include respond(phone) {
-    background-color: $color-grey-light-1;
-    padding: 1rem 1.5rem;
+    background-color: var(--color-grey--1);
+    padding: 1rem 0.5rem;
     border-radius: 3rem;
     position: absolute;
     z-index: 100;
@@ -135,7 +158,7 @@
     background: none;
     border: none;
     cursor: pointer;
-    padding: 0 1.5rem;
+    padding: 0 1rem;
     transition: all 0.3s;
 
     display: flex;
@@ -148,7 +171,7 @@
     svg {
       height: 2.4rem;
       width: 2.4rem;
-      fill: $color-primary;
+      fill: var(--color-primary);
       margin-right: 0.7rem;
       transform: translateY(-1px);
     }
@@ -158,7 +181,7 @@
     }
 
     &:hover {
-      background-color: $color-grey-light-2;
+      background-color: var(--color-grey--2);
     }
   }
 }
@@ -168,7 +191,7 @@
   display: flex;
   width: 100%;
   justify-content: flex-end;
-  margin-right: 3rem;
+  margin-right: 0.5rem;
 
   @include respond(phone) {
     display: block;
@@ -184,8 +207,8 @@
   right: -2.5rem;
   z-index: 10;
   width: 40rem;
-  background-color: #fff;
-  box-shadow: 0 0.8rem 5rem 2rem rgba($color-grey-dark-1, 0.1);
+  background-color: var(--color-grey--1);
+  box-shadow: 1rem 1rem 4rem rgba(#ddd, 0.1);
 
   visibility: hidden;
   opacity: 0;
@@ -209,7 +232,7 @@
     transition: all 0.3s;
 
     &:hover {
-      background-color: $color-grey-light-2;
+      background-color: var(--color-grey--2);
     }
   }
 
@@ -218,11 +241,67 @@
     visibility: visible;
     opacity: 1;
   }
+
+  .preview__link {
+    &:link,
+    &:visited {
+      border: none;
+
+      &:hover {
+        background-color: var(--color-grey--2);
+      }
+    }
+  }
+}
+.slider {
+  width: 8.5rem;
+  margin: 0 1rem;
+  height: 4.2rem;
+  border-radius: 2rem;
+  background-color: var(--color-grey--2);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 1.2rem;
+  position: relative;
+
+  & > *:not(:last-child) {
+    margin-right: 1rem;
+  }
+
+  svg {
+    width: 2.5rem;
+    height: 2.5rem;
+    fill: var(--color-text--3);
+  }
+
+  &__circle {
+    display: block;
+    content: '';
+    position: absolute;
+    left: 1rem;
+    // left: 4.5rem; //transition to night
+    width: 2.8rem;
+    height: 2.8rem;
+    border-radius: 50%;
+    z-index: 100;
+    background-image: var(--gradient);
+    transition: all 0.2s;
+  }
+
+  @include respond(phone-small) {
+    background-color: var(--color-grey--1);
+    position: absolute;
+    z-index: 100;
+    top: 11rem;
+    left: 2rem;
+  }
 }
 
 .navigation {
   position: relative;
-  margin-right: 4rem;
+  margin-right: 3rem;
+  margin-left: 1rem;
   min-width: 8rem;
   height: 100%;
 
@@ -235,7 +314,7 @@
   }
   &__button {
     display: block;
-    background-image: $gradient;
+    background-image: var(--gradient);
     height: 5.3rem;
     width: 8rem;
     border-radius: 10rem;
@@ -254,10 +333,12 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
-    background-image: radial-gradient(
-      rgba($color-grad-1, 1),
-      rgba($color-grad-2, 1)
-    );
+    // background-image: radial-gradient(
+    //   rgba(var(--color-wrapper), 0.8),
+    //   rgba(var(--color-grad-1), 0.8)
+    // );
+    background-image: var(--wrapper-gradient);
+    opacity: 0.8;
     height: 5rem;
     width: 5rem;
     border-radius: 50%;
@@ -306,7 +387,7 @@
         120deg,
         transparent 0%,
         transparent 50%,
-        $color-grey-light-1 50%
+        var(--color-grey--3) 50%
       );
       background-size: 220%;
       clip-path: polygon(10% 0, 100% 0, 90% 100%, 0 100%);
@@ -315,7 +396,7 @@
     &:hover,
     &:active {
       background-position: 100%;
-      color: $color-grey-dark-1;
+      color: #000;
     }
   }
 
@@ -328,7 +409,7 @@
     &::before,
     &::after {
       display: inline-block;
-      background-color: $color-grey-light-1;
+      background-color: var(--color-grey--1);
       border-radius: 1rem;
       height: 3px;
       width: 3rem;
@@ -361,12 +442,12 @@
   }
   &__checkbox:checked + &__button &__icon::before {
     transform: rotate(135deg);
-    background-color: $color-primary;
+    background-color: var(--color-primary);
     top: 0;
   }
   &__checkbox:checked + &__button &__icon::after {
     transform: rotate(-135deg);
-    background-color: $color-primary;
+    background-color: var(--color-primary);
     top: 0;
   }
 
@@ -376,8 +457,10 @@
   }
 
   &__checkbox:checked ~ &__button {
-    background-image: linear-gradient($color-grey-light-1, $color-grey-light-2);
-    border: 2px solid $color-grad-2;
+    background-image: linear-gradient(
+      var(--color-grey--1),
+      var(--color-grey--2)
+    );
   }
 
   &__checkbox:checked ~ &__nav {
