--- a/src/sass/_lists.scss
+++ b/src/sass/_lists.scss
@@ -2,7 +2,7 @@
   border-radius: 1rem;
   overflow: hidden;
   box-shadow: 0 3rem 4rem rgba(0, 0, 0, 0.15);
-  background-color: $color-grey-light-4;
+  background-color: var(--color-grey--1);
   margin: 3rem;
   text-align: left;
   padding-bottom: 1rem;
@@ -33,8 +33,8 @@
     clip-path: polygon(0 0, 100% 0, 100% 65%, 0 100%);
     background-image: linear-gradient(
         to right bottom,
-        rgba($color-grad-1, 0.8),
-        rgba($color-grad-2, 0.8)
+        rgba(#121212, 0.5),
+        rgba(#121212, 0.5)
       ),
       url(../img/list.jpg);
   }
@@ -72,7 +72,7 @@
 
   &__item {
     padding: 0.5rem;
-    border-bottom: 1px solid $color-grey-dark-2;
+    border-bottom: 1px solid var(--color-text--2);
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
@@ -106,7 +106,7 @@
   border-radius: 1rem;
   overflow: hidden;
   box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.15);
-  background-color: $color-grey-light-4;
+  background-color: var(--color-grey--3);
   margin: 3rem;
   width: 45%;
   padding-bottom: 1rem;
@@ -127,16 +127,16 @@
     color: inherit;
     padding: 0.5rem 1rem;
     width: 80%;
-    background-color: $color-grey-light-2;
+    background-color: var(--color-grey--2);
     border-radius: 0.5rem;
-    border: solid 1px $color-grey-dark-1;
+    border: solid 1px var(--color-text--1);
 
     &::placeholder {
-      color: $color-grey-dark-2;
+      color: var(--color-text--2);
     }
     &:focus {
       outline: none;
-      border-bottom: solid 3px $color-primary;
+      border-bottom: solid 3px var(--color-primary);
     }
   }
 
@@ -160,7 +160,7 @@
     }
     &:focus {
       outline: none;
-      border-bottom: solid 3px $color-grey-light-2;
+      border-bottom: solid 3px var(--color-grey--2);
     }
   }
 }
