--- a/src/sass/_planner.scss
+++ b/src/sass/_planner.scss
@@ -4,8 +4,8 @@
   grid-template-rows: repeat(8, 10rem);
   margin-bottom: 3rem;
   font-size: 1.8rem;
-  color: #fff;
-  font-weight: 600;
+  color: var(--color-on-primary);
+  font-weight: 700;
   text-transform: uppercase;
 
   @include respond(tab-land) {
@@ -32,8 +32,8 @@
     margin-top: 3rem;
     text-transform: uppercase;
     padding: 1rem 5rem 1rem 2rem;
-    background-color: $color-primary;
-    color: #fff;
+    background-color: var(--color-primary-variant);
+    color: var(--color-on-primary);
     font-weight: 700;
     clip-path: polygon(0 0, 100% 0, 85% 50%, 100% 100%, 0 100%);
     transition: all 0.2s;
@@ -84,11 +84,9 @@
   }
 
   &__day {
-    background-image: linear-gradient(
-      to right bottom,
-      rgba($color-grad-1, 0.7),
-      rgba($color-grad-2, 0.7)
-    );
+    // background-color: var(--color-primary);
+    background-image: var(--gradient);
+    color: var(--color-on-primary);
     min-width: 15rem;
     padding: 1rem 2rem;
     border-radius: 1rem;
@@ -107,7 +105,9 @@
   }
 
   &__meal {
-    background-image: $gradient;
+    // background-color: var(--color-primary);
+    background-image: var(--gradient);
+    color: var(--color-on-primary);
     min-width: 15rem;
     padding: 1rem 2rem;
     border-radius: 1rem;
@@ -130,7 +130,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(7, 10rem);
-    border: 0.25px solid $color-grey-light-2;
+    border: 0.25px solid var(--color-grey--2);
 
     @include respond(phone) {
       grid-column: 2 / span 1;
@@ -143,7 +143,7 @@
   }
 
   &__recipe {
-    border: 0.25px solid $color-grey-light-2;
+    border: 0.25px solid var(--color-grey--2);
 
     @include respond(phone) {
       display: none;
@@ -184,25 +184,26 @@
       font-size: 1.8rem;
       padding: 0.8rem 0.5rem;
       max-width: 20rem;
-      border: 1px solid #ddd;
       border-radius: 1rem;
       transition: all 0.2s;
       text-transform: uppercase;
       text-align: center;
       font-weight: 600;
-      background-image: $gradient;
-      color: #fff;
+      background-image: var(--gradient);
+      color: var(--color-on-primary);
+      outline: none;
+      border: none;
 
       &:focus {
         outline: none;
-        border: 1px solid $color-primary;
-
-        background-color: $color-grey-light-1;
+        border: 1px solid var(--color-primary);
+        background-color: var(--color-text--1);
       }
     }
 
     &__option {
-      color: $color-grey-dark-1;
+      color: var(--color-text--1);
+      background-color: var(--color-grey--1);
       padding: 1rem 1.5rem;
       font-weight: 600;
     }
@@ -230,13 +231,13 @@
     }
 
     &:hover {
-      background-color: darken($color-grey-light-2, 2%);
+      background-color: var(--color-grey--2);
       transform: scale(1.05);
       box-shadow: 0.2rem 1.2rem 2rem rgba(#000, 0.15);
     }
 
     &--active {
-      background-color: $color-grey-light-2;
+      background-color: var(--color-grey--2);
     }
   }
 
@@ -260,10 +261,10 @@
       left: 0;
       background-image: linear-gradient(
         to right bottom,
-        $color-grad-1,
-        $color-grad-2
+        var(--color-grad-1),
+        var(--color-grad-2)
       );
-      opacity: 0.4;
+      opacity: 0.2;
     }
 
     img {
@@ -289,9 +290,9 @@
 
   &__title {
     font-size: 1.25rem;
-    color: $color-primary;
+    color: var(--color-text--2);
     text-transform: uppercase;
-    font-weight: 600;
+    font-weight: 700;
     align-self: center;
     max-height: 7.5rem;
     overflow: hidden;
@@ -302,7 +303,7 @@
     bottom: 0.75rem;
     right: 0.75rem;
 
-    background-color: darken($color-grey-light-2, 2%);
+    filter: brightness(0.95);
     height: 2rem;
     width: 2rem;
     border-radius: 10rem;
@@ -313,14 +314,14 @@
     svg {
       height: 1.2rem;
       width: 1.2rem;
-      fill: $color-primary;
+      fill: var(--color-primary);
       transform: translate(0.5px, -3.5px);
     }
     &:hover {
-      background-color: $color-primary;
+      background-color: var(--color-primary);
       transform: scale(1.3);
       svg {
-        fill: $color-grey-light-2;
+        fill: var(--color-grey--2);
       }
     }
   }
