--- a/src/sass/_searchResults.scss
+++ b/src/sass/_searchResults.scss
@@ -75,8 +75,8 @@
     font-size: 1.5rem;
     margin-top: 4rem;
     padding: 1rem 4rem 1rem 2rem;
-    background-color: $color-primary;
-    color: #fff;
+    background-color: var(-color-primary-variant);
+    color: var(--color-on-primary);
     font-weight: 700;
     clip-path: polygon(0 0, 100% 0, 85% 50%, 100% 100%, 0 100%);
     transition: all 0.2s;
@@ -88,14 +88,14 @@
 }
 
 .copyright {
-  color: $color-grey-dark-2;
+  color: var(--color-text--2);
   font-size: 1.2rem;
   padding: 0 3.5rem;
   margin-top: 8rem;
 
   .twitter-link:link,
   .twitter-link:visited {
-    color: $color-grey-dark-2;
+    color: var(--color-text--2);
   }
 
   @include respond(tab-port) {
