fixed label bug

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&display=swap");
 :root {
   --color-primary: #e62a15;
@@ -871,7 +872,7 @@ body {
     font-size: 1.5rem;
     margin-top: 4rem;
     padding: 1rem 4rem 1rem 2rem;
-    background-color: var(-color-primary-variant);
+    background-color: var(--color-primary-variant);
     color: var(--color-on-primary);
     font-weight: 700;
     clip-path: polygon(0 0, 100% 0, 85% 50%, 100% 100%, 0 100%);
