--- a/src/sass/_searchResults.scss
+++ b/src/sass/_searchResults.scss
@@ -75,7 +75,7 @@
     font-size: 1.5rem;
     margin-top: 4rem;
     padding: 1rem 4rem 1rem 2rem;
-    background-color: var(-color-primary-variant);
+    background-color: var(--color-primary-variant);
     color: var(--color-on-primary);
     font-weight: 700;
     clip-path: polygon(0 0, 100% 0, 85% 50%, 100% 100%, 0 100%);
