--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&display=swap');
+
 * {
   margin: 0;
   padding: 0;
